--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -120,6 +120,7 @@
             android:textAllCaps="false"
             android:textColor="@color/colorText"
             android:background="@drawable/border"
+            android:onClick="shareOnFacebook"
             />
 
     </RelativeLayout>
