--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
             android:text="Utilizator"
             android:layout_below="@+id/iv_icon"
             android:layout_marginTop="24dp"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:textColor="@color/colorText"
             />
 
@@ -48,10 +48,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_username"
             android:singleLine="true"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:inputType="textPersonName"
             android:padding="6dp"
-            android:hint="Email"
+            android:hint="e-mail"
             android:textColor="@color/colorText"
             android:backgroundTint="@color/colorGray"
             android:layout_marginBottom="10dp"
@@ -67,7 +67,7 @@
             android:text="Parolă"
             android:layout_below="@+id/et_username"
             android:layout_marginTop="16dp"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:textColor="@color/colorText"
             />
 
@@ -79,10 +79,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_password"
             android:singleLine="true"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:inputType="textPassword"
             android:padding="6dp"
-            android:hint="Parola"
+            android:hint="parolă"
             android:textColor="@color/colorText"
             android:backgroundTint="@color/colorGray"
             android:layout_marginBottom="10dp"
@@ -97,30 +97,13 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/et_password"
             android:layout_marginTop="32dp"
-            android:textSize="22sp"
+            android:textSize="24sp"
             android:text="Autentificare"
             android:padding="6dp"
             android:textAllCaps="false"
             android:textColor="@color/colorText"
             android:background="@drawable/border_yellow"
             android:onClick="@{viewModel::onLoginClicked}"
-            />
-
-        <Button
-            android:id="@+id/btn_signup"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_signin"
-            android:layout_marginTop="32dp"
-            android:textSize="22sp"
-            android:text="Înregistrare"
-            android:padding="6dp"
-            android:textAllCaps="false"
-            android:textColor="@color/colorText"
-            android:background="@drawable/border"
-            android:onClick="shareOnFacebook"
             />
 
     </RelativeLayout>
