--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -5,11 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.NotificationsFragment">
 
-    <TextView
+    <Button
+        android:id="@+id/btn_send_mail"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Notificariiiiii"
-        android:textAlignment="center"
-        android:layout_marginTop="100dp"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:layout_marginTop="32dp"
+        android:textSize="22sp"
+        android:text="Trimite mail unui profesor"
+        android:padding="6dp"
+        android:textAllCaps="false"
+        android:textColor="@color/colorText"
+        android:background="@drawable/border_yellow"
+        />
 
 </FrameLayout>
