--- a/app/src/main/res/layout/row_home_items.xml
+++ b/app/src/main/res/layout/row_home_items.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:text="Year group"
+        android:text="Știri studenți"
         android:textSize="22sp"
         />
 
