--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -20,13 +20,13 @@
                 android:id="@+id/tv_title_subject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:text="SUBIECT"
+                android:textStyle="bold"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:text="Subiect"
-                android:textColor="@color/colorText"
-                android:textSize="24sp"
-                android:textStyle="bold"/>
+                android:layout_marginTop="24dp"
+                android:textSize="16sp"
+                android:textColor="@color/colorText"/>
 
 
             <EditText
@@ -34,12 +34,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_title_subject"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:singleLine="true"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:textColor="@color/colorText"
+                android:textColor="@color/colorTextBold"
+                android:textStyle="bold"
                 android:hint="a b c ..."
                 />
 
@@ -47,14 +48,15 @@
                 android:id="@+id/tv_post_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:text="MESAJ"
+                android:textStyle="bold"
+                android:layout_below="@+id/et_text_subject"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:text="Mesaj"
+                android:layout_marginTop="24dp"
+                android:textSize="16sp"
                 android:textColor="@color/colorText"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:layout_below="@+id/et_text_subject"/>
+                />
 
 
             <EditText
@@ -64,17 +66,20 @@
                 android:layout_below="@+id/tv_post_message"
                 android:maxLines="7"
                 android:lines="7"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:textColor="@color/colorText"
+                android:textColor="@color/colorTextBold"
+                android:textStyle="bold"
                 android:hint="..."
                 android:gravity="top|left"
                 />
 
             <Button
                 android:id="@+id/btn_facebook"
+                android:layout_marginStart="90dp"
+                android:layout_marginEnd="90dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="shareOnFacebook"
@@ -82,12 +87,11 @@
                 android:layout_below="@+id/et_post_message"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="32dp"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:padding="6dp"
-                android:layout_margin="20dp"
                 android:textAllCaps="false"
-                android:textColor="@color/colorText"
-                android:background="@drawable/border_yellow"
+                android:textColor="@color/colorWhite"
+                android:background="@drawable/border_blue_full"
                 />
 
         </RelativeLayout>
@@ -98,10 +102,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:backgroundTint="@color/colorPurpleLight"
-        android:src="@drawable/ic_add2"
+        android:backgroundTint="@color/colorPrimary"
+        android:src="@drawable/ic_add_white_24dp"
         android:layout_margin="20dp"
-        app:fabSize="normal"
+        app:fabSize="mini"
         android:onClick="onAddPost"
         />
 
