--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -11,14 +11,6 @@ tools:context=".Activities.EditProfileActivity">
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_icon"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:src="@drawable/ic_up_background"
-        android:layout_alignParentTop="true"
-        />
-
     <LinearLayout
         android:id="@+id/ll_edit_container"
         android:layout_marginEnd="20dp"
@@ -56,10 +48,10 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_marginEnd="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Număr de telefon"
+        android:text="TELEFON"
         android:layout_below="@+id/ll_edit_container"
         android:layout_marginTop="48dp"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textColor="@color/colorText"
         />
 
@@ -71,11 +63,12 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_phone"
         android:singleLine="true"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:inputType="textPersonName"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorGray"
+        android:backgroundTint="@color/colorTextHint"
+        android:textStyle="bold"
         android:layout_marginBottom="10dp"
         />
 
@@ -85,10 +78,10 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_marginEnd="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Număr înmatriculare"
+        android:text="NUMĂR DE ÎNMATRICULARE"
         android:layout_below="@+id/et_phone"
         android:layout_marginTop="16dp"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textColor="@color/colorText"
         />
 
@@ -100,30 +93,31 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_car"
         android:singleLine="true"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:inputType="textPersonName"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorGray"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/colorTextHint"
+        android:textStyle="bold"
         />
 
     <Button
         android:id="@+id/btn_save"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/et_car"
         android:layout_marginTop="32dp"
         android:textSize="20sp"
         android:text="Salvează"
         android:padding="6dp"
         android:textAllCaps="false"
-        android:textColor="@color/colorText"
-        android:background="@drawable/border"
         android:onClick="OnSave"
         android:layout_marginBottom="20dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginEnd="90dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/border_blue_full"
         />
 
 </RelativeLayout>
