--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,23 +22,43 @@
         <ImageView
             android:id="@+id/iv_icon"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:src="@drawable/ic_up_background"
+            android:layout_height="80dp"
             android:layout_alignParentTop="true"
-            />
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/sigla"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"/>
 
-        <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_icon"
+            android:layout_marginTop="16dp"
+            android:id="@+id/ll_email">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_email_black_24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+                />
+
+            <TextView
             android:id="@+id/tv_username"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Utilizator"
-            android:layout_below="@+id/iv_icon"
-            android:layout_marginTop="24dp"
-            android:textSize="24sp"
+            android:text="EMAIL"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="24dp"
+                android:textSize="16sp"
             android:textColor="@color/colorText"
             />
+
+
+        </LinearLayout>
 
         <EditText
             android:id="@+id/et_username"
@@ -46,63 +66,78 @@
             android:layout_marginEnd="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_username"
+            android:layout_below="@+id/ll_email"
             android:singleLine="true"
             android:textSize="20sp"
             android:inputType="textPersonName"
             android:padding="6dp"
-            android:hint="e-mail"
             android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorGray"
+            android:textStyle="bold"
+            android:backgroundTint="@color/colorTextBold"
             android:layout_marginBottom="10dp"
             app:addTextChangedListener= "@{viewModel.emailTextWatcher}"
             />
 
-        <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/et_username"
+            android:id="@+id/ll_parola">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_security_black_24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+
+                />
+
+            <TextView
             android:id="@+id/tv_password"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Parolă"
+            android:text="PAROLĂ"
             android:layout_below="@+id/et_username"
-            android:layout_marginTop="16dp"
-            android:textSize="24sp"
+            android:layout_marginTop="24dp"
+            android:textSize="16sp"
             android:textColor="@color/colorText"
             />
-
+        </LinearLayout>
         <EditText
             android:id="@+id/et_password"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_password"
+            android:layout_below="@+id/ll_parola"
             android:singleLine="true"
             android:textSize="20sp"
             android:inputType="textPassword"
             android:padding="6dp"
-            android:hint="parolă"
             android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorGray"
+            android:backgroundTint="@color/colorTextBold"
             android:layout_marginBottom="10dp"
             app:addTextChangedListener= "@{viewModel.passwordTextWatcher}"
             />
 
         <Button
             android:id="@+id/btn_signin"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginEnd="90dp"
+            android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/et_password"
             android:layout_marginTop="32dp"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:text="Autentificare"
-            android:padding="6dp"
             android:textAllCaps="false"
-            android:textColor="@color/colorText"
-            android:background="@drawable/border_yellow"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/border_blue_full"
             android:onClick="@{viewModel::onLoginClicked}"
             />
 
