--- a/app/src/main/res/layout/activity_send_mail.xml
+++ b/app/src/main/res/layout/activity_send_mail.xml
@@ -11,39 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_icon"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:src="@drawable/ic_up_background"
-            android:layout_alignParentTop="true"
-            />
-
-        <TextView
-            android:id="@+id/tv_email_prof"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/iv_icon"
-            android:textSize="22sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textColor="@color/colorText"
-            android:text="Alege un profesor"
-            android:padding="6dp"
-            android:onClick="OnChooseProf"
-            />
-
         <TextView
             android:id="@+id/tv_email_subiect"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Subiect"
-            android:layout_below="@+id/tv_email_prof"
+            android:text="SUBIECT"
             android:layout_marginTop="26dp"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textColor="@color/colorText"
             />
 
@@ -52,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_email_subiect"
-            android:textSize="22sp"
+            android:textSize="16sp"
             android:singleLine="true"
             android:layout_marginTop="16dp"
             android:layout_marginStart="20dp"
@@ -60,6 +36,8 @@
             android:textColor="@color/colorText"
             android:hint="Nota examen TS"
             android:padding="6dp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/colorTextBold"
             />
 
         <TextView
@@ -68,10 +46,10 @@
             android:layout_marginEnd="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mesaj"
+            android:text="MESAJ"
             android:layout_below="@+id/et_email_subiect"
             android:layout_marginTop="16dp"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textColor="@color/colorText"
             />
 
@@ -80,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_email_mesaj"
-            android:textSize="22sp"
+            android:textSize="16sp"
             android:gravity="left"
             android:layout_marginTop="16dp"
             android:layout_marginStart="20dp"
@@ -90,23 +68,43 @@
             android:padding="6dp"
             android:maxLines="7"
             android:lines="7"
+            android:textStyle="bold"
+            android:backgroundTint="@color/colorTextBold"
+            />
+
+        <TextView
+            android:id="@+id/tv_email_prof"
+            android:layout_below="@+id/et_email_mesaj"
+            android:layout_width="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorWhite"
+            android:textColor="@color/colorText"
+            android:text="Profesori"
+            android:padding="6dp"
+            android:onClick="OnChooseProf"
+            android:layout_marginStart="90dp"
+            android:layout_marginEnd="90dp"
+            android:textAlignment="center"
             />
 
         <Button
             android:id="@+id/btn_send"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/et_email_mesaj"
+            android:layout_below="@+id/tv_email_prof"
             android:layout_marginTop="32dp"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:text="Trimite"
             android:padding="6dp"
             android:textAllCaps="false"
-            android:textColor="@color/colorText"
-            android:background="@drawable/border_yellow"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/border_blue_full"
             android:onClick="OnSend"
+            android:layout_marginStart="90dp"
+            android:layout_marginEnd="90dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             />
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
