--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@drawable/ic_start_app_xxxhdpi"
+        android:src="@drawable/sigla"
         android:layout_centerInParent="true"
         />
 
