--- a/app/src/main/res/layout/activity_year_group.xml
+++ b/app/src/main/res/layout/activity_year_group.xml
@@ -8,52 +8,29 @@
 
     <include layout="@layout/toolbar_with_back_button"/>
 
-    <androidx.core.widget.NestedScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:layout_below="@+id/toolbar_with_back_button"
-        >
+        android:layout_below="@+id/toolbar_with_back_button">
 
-        <RelativeLayout
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_add_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            app:fabSize="mini"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_add_white_24dp"
+            android:layout_margin="20dp"
+            android:layout_alignParentBottom="true"
+            android:onClick="OnAddPost"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_listed_yeargroup"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_below="@+id/toolbar_with_back_button"/>
 
-            <RelativeLayout
-                android:id="@+id/tv_search"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:background="@color/colorToolbar">
-
-            <ImageView
-                android:id="@+id/iv_toolbar_back"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:src="@drawable/ic_search"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"/>
-            </RelativeLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_listed_yeargroup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_below="@+id/tv_search"/>
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/btn_add_post"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                app:fabSize="mini"
-                android:backgroundTint="@color/colorPrimary"
-                android:src="@drawable/ic_add"
-                android:layout_margin="20dp"
-                android:onClick="OnAddPost"/>
-
-        </RelativeLayout>
-    </androidx.core.widget.NestedScrollView>
+    </RelativeLayout>
 </RelativeLayout>
