--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,21 +13,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/iv_icon"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:src="@drawable/ic_up_background"
-                />
 
             <LinearLayout
 
                 android:id="@+id/ll_name_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:orientation="horizontal"
                 android:weightSum="2"
-                android:layout_below="@+id/iv_icon"
                 >
 
                 <LinearLayout
@@ -43,10 +37,10 @@
                         android:layout_marginEnd="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Prenume"
+                        android:text="PRENUME"
                         android:layout_below="@+id/iv_icon"
-                        android:layout_marginTop="16dp"
-                        android:textSize="18sp"
+                        android:layout_marginTop="24dp"
+                        android:textSize="16sp"
                         android:textColor="@color/colorText"
                         />
 
@@ -62,18 +56,10 @@
                         android:inputType="textPersonName"
                         android:padding="6dp"
                         android:textColor="@color/colorText"
-                        android:backgroundTint="@color/colorGray"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/colorTextBold"
                         android:layout_marginBottom="10dp"
                         />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    >
 
                     <TextView
                         android:id="@+id/tv_name"
@@ -81,9 +67,9 @@
                         android:layout_marginEnd="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Nume"
+                        android:text="NUME"
                         android:layout_marginTop="16dp"
-                        android:textSize="18sp"
+                        android:textSize="16sp"
                         android:textColor="@color/colorText"
                         />
 
@@ -99,7 +85,8 @@
                         android:inputType="textPersonName"
                         android:padding="6dp"
                         android:textColor="@color/colorText"
-                        android:backgroundTint="@color/colorGray"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/colorTextBold"
                         android:layout_marginBottom="10dp"
                         />
 
@@ -113,10 +100,10 @@
                 android:layout_marginEnd="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Număr matricol"
+                android:text="NUMĂR MATRICOL"
                 android:layout_below="@+id/ll_name_container"
                 android:layout_marginTop="16dp"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textColor="@color/colorText"
                 />
 
@@ -131,7 +118,8 @@
                 android:textSize="22sp"
                 android:padding="6dp"
                 android:textColor="@color/colorText"
-                android:backgroundTint="@color/colorGray"
+                android:textStyle="bold"
+                android:backgroundTint="@color/colorTextBold"
                 android:layout_marginBottom="10dp"
                 />
 
@@ -141,10 +129,10 @@
                 android:layout_marginEnd="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Număr de telefon"
+                android:text="TELEFON"
                 android:layout_below="@+id/et_matricolnr"
                 android:layout_marginTop="16dp"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textColor="@color/colorText"
                 />
 
@@ -159,7 +147,8 @@
                 android:textSize="22sp"
                 android:padding="6dp"
                 android:textColor="@color/colorText"
-                android:backgroundTint="@color/colorGray"
+                android:textStyle="bold"
+                android:backgroundTint="@color/colorTextBold"
                 android:layout_marginBottom="10dp"
                 />
 
@@ -169,10 +158,10 @@
                 android:layout_marginEnd="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Număr înmatriculare"
+                android:text="NUMĂR DE ÎNMATRICULARE"
                 android:layout_below="@+id/et_phone"
                 android:layout_marginTop="16dp"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textColor="@color/colorText"
                 />
 
@@ -187,7 +176,8 @@
                 android:textSize="22sp"
                 android:padding="6dp"
                 android:textColor="@color/colorText"
-                android:backgroundTint="@color/colorGray"
+                android:textStyle="bold"
+                android:backgroundTint="@color/colorTextBold"
                 android:layout_marginBottom="10dp"
                 />
 
@@ -202,16 +192,16 @@
                 <Button
                     android:id="@+id/btn_edit"
                     android:layout_marginStart="20dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="20dp"
                     android:textSize="20sp"
-                    android:text="Editează profilul"
+                    android:text="Editează profil"
                     android:padding="6dp"
                     android:textAllCaps="false"
-                    android:textColor="@color/colorText"
-                    android:background="@drawable/border_yellow"
+                    android:textColor="@color/colorTextButton"
+                    android:background="@drawable/border_blue"
                     android:layout_marginBottom="20dp"
                     />
 
@@ -219,17 +209,17 @@
                     android:id="@+id/btn_signout"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_below="@+id/et_car"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="20dp"
                     android:textSize="20sp"
                     android:text="Deconectare"
                     android:padding="6dp"
                     android:textAllCaps="false"
-                    android:textColor="@color/colorText"
-                    android:background="@drawable/border"
+                    android:textColor="@color/colorWhite"
+                    android:background="@drawable/border_blue_full"
                     android:layout_marginBottom="20dp"
                     />
             </LinearLayout>
