--- a/app/src/main/res/layout/row_comments.xml
+++ b/app/src/main/res/layout/row_comments.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFEEFF">
+        android:background="#4d5273">
 
     <TextView
         android:id="@+id/tv_text_comment_name"
@@ -21,7 +21,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:textStyle="italic"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorWhite"
         android:text="NUME Prenume" />
 
     <TextView
@@ -33,7 +33,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorWhite"
         android:layout_marginBottom="10dp"
         android:text="trebuie sa inplementez o lista: numele persoanei si ce anume a zis" />
 
