--- a/app/src/main/res/layout/row_yeargroup_posts.xml
+++ b/app/src/main/res/layout/row_yeargroup_posts.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFEEFF">
+        android:background="#FFFFFF">
 
         <TextView
             android:id="@+id/tv_date"
