--- a/app/src/main/res/layout/toolbar_with_back_button.xml
+++ b/app/src/main/res/layout/toolbar_with_back_button.xml
@@ -7,7 +7,7 @@
         android:id="@+id/iv_toolbar_back"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/ic_back"
+        android:src="@drawable/ic_arrow_back_white_24dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
@@ -20,7 +20,7 @@
         android:paddingEnd="20dp"
         android:textAlignment="center"
         android:gravity="center"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorWhite"
         android:layout_centerVertical="true"
         android:textStyle="bold"
         android:textSize="16sp"
