--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -8,7 +8,12 @@
     android:orientation="vertical"
     tools:context=".Activities.CalendarActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
+        android:id="@+id/ll_calendar"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:background="@color/colorWhite"
@@ -23,6 +28,10 @@
 
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ll_calendar">
 
         <TextView
             android:id="@+id/tv_calendar"
@@ -32,7 +41,8 @@
             android:textStyle="bold"
             android:textColor="@color/colorTextHint"
             android:textSize="18sp"
-            android:layout_gravity="center"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
             />
 
 
@@ -42,26 +52,25 @@
         android:layout_height="wrap_content"
         android:textSize="16dp"
         android:layout_marginTop="20dp"
+        android:layout_below="@+id/tv_calendar"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:textAlignment="center"
         android:visibility="invisible"
-        android:onClick="OnAddEvent"/>
+        android:layout_centerInParent="true" />
 
-    <Button
-        android:id="@+id/btn_save_calendar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-        android:text="Adaugă eveniment"
-        android:padding="6dp"
-        android:textAllCaps="false"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/border_blue_full"
-        />
+    </RelativeLayout>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_add_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            app:fabSize="mini"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_add_white_24dp"
+            android:layout_margin="20dp"
+            android:layout_alignParentBottom="true"
+            android:onClick="OnAddEvent"/>
+    </RelativeLayout>
 </LinearLayout>
